snapshot-tests/tests/snapshots/parser__bad_table_names__multi_bar.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[MultilineStringKey]: multiline strings are not allowed for key
  ┌─ multi_bar:1:2
  │
1 │ ["""bar"""]
  │  ^^^^^^^^^ multiline keys are not allowed
