snapshot-tests/tests/snapshots/parser__bad_table_names__trailing_period.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[Wanted]: expected a table key, found a right bracket at `a`
  ┌─ trailing_period:1:4
  │
1 │ [a.]
  │    ^ expected a table key
